tests/errors/same_type_as.f90
program same_type_as
    print *, same_type_as(1.0, 1.0)
end program 